fix: overflow screen

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,6 +7,8 @@ body {
   margin: 0;
   font-family: "Quicksand", sans-serif;
   color: #4f4f4f;
+  width: 100%;
+  overflow-x: unset;
 
   @media screen and (max-width: 768px) {
     font-size: 14px;
